<resources>
    <string name="app_name">그맛</string>
    <string name="title_home">메인</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_map">맛집지도</string>
    <string name="title_regist">맛집등록</string>
    <string name="title_friends">친구들맛집</string>
    <string name="title_myinfo">내정보</string>
    <string name="title_premium">프리미엄</string>

    <string name="admob_app_id">ca-app-pub-1902482017542301~8976691991</string>
    <string name="banner_ad_unit_id">ca-app-pub-1902482017542301/2411283648</string>
    <string name="banner_ad_unit_id_for_test">ca-app-pub-3940256099942544/6300978111</string>

</resources>