<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/title_map"/>

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_regist_black_24dp"
        android:title="@string/title_regist"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_friends_black_24dp"
        android:title="@string/title_friends"/>

    <item
        android:id="@+id/navigation_notificationsq"
        android:icon="@drawable/ic_myinfo_black_24dp"
        android:title="@string/title_myinfo"/>

    <item
        android:id="@+id/navigation_notificationsw"
        android:icon="@drawable/ic_premium_black_24dp"
        android:title="@string/title_premium"/>

</menu>